Update and rename index.html.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-select=none">
-<title>Tactical Brawl Mobile</title>
+<title>Tactical Brawl Mobi</title>
 <style>
     body{ margin:0; overflow:hidden; background:#1a1a1a; font-family:sans-serif; touch-action:none; user-select:none; }
     canvas{ display:block; background:#2d5a27; }
@@ -263,4 +263,5 @@ function animate() {
 animate();
 </script>
 </body>
+
 </html>
